# mlops-zoomcamp-2022

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
modules/: backend.db  launch_mlflow_server.sh  module_2_homework.py  module_3_homework.py  module_4_homework.py
modules/module_1/: model_1_homework.ipynb  model_trainer.py  module_1_homework.py
modules/module_2/: backend.db  launch_mlflow_server.sh  module_2_homework.py
modules/module_2/scripts/: hpo.py  register_model.py  train.py
